results/SpecGenBench/4-shot/log-SelectionSort-2023_11_28_01_45_33.txt
public class SelectionSort {

    //@ ensures (\forall int i, j; 0 <= i && i < j && j < arr.length; arr[i] <= arr[j]);
    public static void selectionSort(int[] arr){  
        for (int i = 0; i < arr.length - 1; i++)  
        {  
            int index = i;  
            //@ maintaining i <= index && index < arr.length;
            //@ maintaining (\forall int j; i <= j && j < arr.length; arr[index] <= arr[j]);
            //@ decreases arr.length - i;
            for (int j = i + 1; j < arr.length; j++){  
                if (arr[j] < arr[index]){  
                    index = j;
                }  
            }  
            int smallerNumber = arr[index];   
            arr[index] = arr[i];  
            arr[i] = smallerNumber;  
        }  
    }
    
}
/home/max/Documents/JMLGPT/tmp/SelectionSort.java:9: error: variable j is already defined in method selectionSort(int[])
            //@ maintaining (\forall int j; i <= j && j < arr.length; arr[index] <= arr[j]);
                                         ^
1 error

